fixing off-centered loader

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@ body {
 }
 
 .loading {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
